/*
 * Copyright (C) 2020 Dremio
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
package nessie.store;

option java_package = "org.projectnessie.store";
option java_outer_classname = "ObjectTypes";
option java_generate_equals_and_hash = true;

message Contents {
  oneof object_type {
    IcebergTable iceberg_table = 1;
    HiveTable hive_table = 2;
    HiveDatabase hive_database = 3;
    SqlView sql_view = 4;
    DeltaLakeTable delta_lake_table = 5;
  }
}

message IcebergTable {
  string metadata_location = 1;
}

message HiveTable {
  bytes table = 1;
  repeated bytes partition = 2;
}

message HiveDatabase {
  bytes database = 1;
}

message SqlView {
  string sql_text = 1;
  string dialect = 2;
}

message DeltaLakeTable {
  string last_checkpoint = 1;
  repeated string checkpoint_location_history = 2;
  repeated string metadata_location_history = 3;
}
